fix card as default vertical align

--- a/src/_card.scss
+++ b/src/_card.scss
@@ -11,7 +11,7 @@
 
 .card{
     display: inline-block;
-    vertical-align: center;
+    vertical-align: middle;
     text-align: center;
     transform-origin: 50% 50%;
     transition: transform 0.6s;
